# pdf2audiobook

./: Dockerfile  README.md  client.py  pyproject.toml  server.py
