[tool.poetry]
name = "abra"
version = "0.1.0"
description = ""
authors = ["rayquaza7 <sarhaangulati737@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.23.1"
watchdog = "^3.0.0"
modal-client = "^0.49.2348"
python-dotenv = "^1.0.0"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
